--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,35 @@
 body {
     margin: 0;
+    font-size:16px;
+    font-family:;
 }
 
-header {
+.jumbotron {
     background-image: url(../img/header.jpg);
     background-size: cover;
     width: 100%;
     margin-top: -20px;
     color: #fff;
     text-align: center;
+    padding-top:150px;
+}
+.about img {
+    margin-top: -20px;
+}
+
+.about .container {
+   text-align: center;
+}
+
+#about_info  p{
+    padding-left: 100px;
+    padding-right:100px;
+    text-align: justify;
+}
+
+.icon {
+    background-color: #333;
+    color: #fff;
+    border-radius: 50%;
+    padding: 10px;
 }
