--- a/css/style.css
+++ b/css/style.css
@@ -12,14 +12,27 @@ h2 {
     padding-bottom: 20px;
 }
 
-.jumbotron {
-    background-image: url(../img/header.jpg);
-    background-size: cover;
+.navbar {
+    background: rgba(0, 0, 0, 0.3);
+}
+
+#header-jumbotron {
     width: 100%;
-    margin-top: -20px;
+    height: 100vh;
     color: #fff;
     text-align: center;
-    padding-top:150px;
+    position: relative;
+    background-image: url(../img/header.jpg);
+    background-size: cover;
+}
+
+.jumbotron .header-info{
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%) }
 }
 
 /*About*/
@@ -48,15 +61,18 @@ h2 {
 
 .interests .container{
     text-align: center;
+    font-size: 20px;
 }
 .thumbnail {
     width: auto;
     height: auto;
     max-height: 400px;
-    max-width: 350px;
+    max-width: 400px;
     overflow: hidden;
     display: block;
     margin: auto;
+    margin-bottom: 10px;
+    position: relative;
 }
 
 .interests img{
@@ -64,6 +80,23 @@ h2 {
     height:auto;
     width: auto;
 }
+
+.interests .thumbnail h2 { 
+   position: absolute; 
+   top: 100px; 
+   left: 0; 
+   width: 100%; 
+}
+
+.interests .thumbnail h2 span { 
+    color: white; 
+    font: bold 24px/45px Helvetica, Sans-Serif; 
+    letter-spacing: -1px;  
+    background: rgb(0, 0, 0); /* fallback color */
+    background: rgba(0, 0, 0, 0.7);
+    padding: 10px; 
+}
+
 
 /*Skills*/
 .skills .container .row {
