--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ h2 {
 
 .navbar {
     background: rgba(0, 0, 0, 0.3);
+    color: #fff;
 }
 
 #header-jumbotron {
@@ -24,6 +25,7 @@ h2 {
     position: relative;
     background-image: url(../img/header.jpg);
     background-size: cover;
+    margin-bottom: 0px;
 }
 
 .jumbotron .header-info{
@@ -32,47 +34,48 @@ h2 {
     top: 50%;
     left: 50%;
     margin-right: -50%;
-    transform: translate(-50%, -50%) }
+    transform: translate(-50%, -50%) 
 }
 
 /*About*/
 .about {
     text-align: center;
+    background-color: #333;
+    color: white;
+    padding-bottom: 50px;
 }
 
 .about img {
-    margin-top: -20px;
+    padding-top: 20px;
     height: auto;
     width: auto;
 }
 
 #about_info  p{
-    padding-left: 100px;
-    padding-right:100px;
+    padding-left: 200px;
+    padding-right:200px;
+    line-height: 200%;
     text-align: justify;
 }
 
 /*Interests*/
 .interests{
-    background-color: #f4f4f4;
-    margin-top: -20px;
     padding-top: 20px;
+    color: #000;
+    background-color: #f4f4f4;
 }
 
 .interests .container{
     text-align: center;
     font-size: 20px;
+    margin: 0 auto;
+    width: 100%;
 }
-.thumbnail {
-    width: auto;
-    height: auto;
-    max-height: 400px;
-    max-width: 400px;
-    overflow: hidden;
-    display: block;
-    margin: auto;
-    margin-bottom: 10px;
-    position: relative;
+
+.interests hr{
+    width:75%;
+    border-top: 2px solid;
+    border-color: #a753ff;
 }
 
 .interests img{
@@ -81,31 +84,77 @@ h2 {
     width: auto;
 }
 
-.interests .thumbnail h2 { 
+.interests .col-md-3 {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.interests .row {
+    padding-bottom:0px;
+}
+
+.picture-container {
+    width: auto;
+    height: auto;
+    overflow: hidden;
+    display: block;
+    margin: auto;
+    position: relative;
+    max-height: 230px;
+}
+
+.picture-container:before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0,0,0, 0.3);
+    -moz-transition: background .3s linear;
+    -webkit-transition: background .3s linear;
+    -o-transition: background .3s linear;
+    transition: background .3s linear;
+}
+
+
+.picture-container h2 { 
    position: absolute; 
    top: 100px; 
    left: 0; 
    width: 100%; 
 }
 
-.interests .thumbnail h2 span { 
+.picture-container h2 span { 
     color: white; 
     font: bold 24px/45px Helvetica, Sans-Serif; 
     letter-spacing: -1px;  
-    background: rgb(0, 0, 0); /* fallback color */
-    background: rgba(0, 0, 0, 0.7);
-    padding: 10px; 
+    /*background: rgb(0, 0, 0); /* fallback color */
+    /*background: rgba(0, 0, 0, 0.3);*/
+    /*padding: 10px; */
 }
 
 
 /*Skills*/
+.skills{
+    background-color: #333;
+    /*color: #25004c;*/
+    color: #a753ff;
+}
+
+.skills h2 {
+    text-align: center;
+}
 .skills .container .row {
     padding-bottom: 20px;
+    color: white;
+    
 }
 
 .icon {
-    background-color: #333;
-    color: #fff;
+    /*color: #25004c;*/
+    color:#a753ff;
     border-radius: 50%;
     padding: 10px;
 }
