--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,7 @@ hr{
 .interests{
     color: #000;
     background-color: #f4f4f4;
+    margin-bottom: 50px;
 }
 
 .interests .container-outer{
@@ -154,6 +155,18 @@ hr{
     border-radius: 50%;
     padding: 10px;
 }
+
+/***************************** Contact ***************************/
+.contact {
+    font-size: 20px;
+    line-height: 150%;
+}
+
+.social-icon {
+    color: #a753ff;
+    margin: 5px;
+}
+
 
 /***************************** Footer ***************************/
 footer {
