--- a/css/style.css
+++ b/css/style.css
@@ -21,15 +21,30 @@ hr{
     border-color: #a753ff;
 }
 
+.jumbotron-joke{
+    width: 100%;
+    height: 100vh;
+    background-image: url(../img/web.jpg);
+    background-size: cover;
+}
+
 .row{
     padding-bottom: 20px;
 }
 
 .navbar {
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0.7);
+}
+.navbar-custom .navbar-brand {
     color: #fff;
 }
 
+.navbar-custom .navbar-nav > li > a {
+    color: #fff;
+}
+
+
+/***************************** Header ***************************/
 #header-jumbotron {
     width: 100%;
     height: 100vh;
@@ -50,6 +65,22 @@ hr{
     transform: translate(-50%, -50%) 
 }
 
+header hr {
+    border-top: 5px solid;
+    border-color: #fff;
+    width: 30%;
+}
+
+.btn-outline {
+    background: none;
+    padding: 12px 22px;
+    border: 2px solid #fff;
+    color: #fff;
+}
+
+.btn-outline a {
+    color:#fff;
+}
 /***************************** About ***************************/
 .about {
     background-color: #333;
