--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 body {
     margin: 0;
     font-size:16px;
-    font-family:;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", 
+  Helvetica, Arial, "Lucida Grande", sans-serif;
 }
 
 section {
@@ -21,12 +22,6 @@ hr{
     border-color: #a753ff;
 }
 
-.jumbotron-joke{
-    width: 100%;
-    height: 100vh;
-    background-image: url(../img/web.jpg);
-    background-size: cover;
-}
 
 .row{
     padding-bottom: 20px;
@@ -43,6 +38,9 @@ hr{
     color: #fff;
 }
 
+.navbar-custom .navbar-nav > li > a:hover {
+    color:#000;
+}
 
 /***************************** Header ***************************/
 #header-jumbotron {
